--- a/src/Create.css
+++ b/src/Create.css
@@ -7,8 +7,8 @@
 	#cardWrap{
 		height: 500px;
 		overflow-y: scroll;
-		border: solid 1px black;
-		border-radius: 5px;
+		/* border: solid 1px black;
+		border-radius: 5px; */
 	}
 	.badge{
 		cursor: pointer;
@@ -41,5 +41,3 @@
 		height: 100vh;
 		background: #fba461;
 	  }
-
-	
