still frontend app polish

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ border-color: #6400ed;
 		margin-top: 100px;
 	}
 
-.username p {
+.usernameapp p {
 	font-size: 18px;
 	color: #333333;
 	text-align: right;
