--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,45 +6,76 @@ html, body {
 #leftCol, #rightCol {
     height: 100vh;
 }
-#rightCol {
-    background: #d2d9ff;
-}
+
 .toprow{
 	text-align: right;
 }
-.filterbutton {
-	-webkit-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
--moz-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
-background-color: #6400ed;
-color: rgb(237, 237, 237);
-padding-left: 15px;
-padding-right: 15px;
-border-color: #6400ed;
+.filterbutton:hover {
+	background-color: #12cfdc;
+	color: rgb(237, 237, 237);
+	font-weight: bold;
 }
-	#cardWrap{
-		height: 500px;
-		overflow-y: scroll;
-		display: inline-grid;
-		grid-template-columns: 1fr 1fr;
-		/* border: solid 1px black;
-		border-radius: 5px; */
-	}
+.filterbutton {
+	border-color: #12cfdc;
+	width: 180px;
+	font-size: 18px;
+	-webkit-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+	-moz-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+	box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+}
 
-	#category p:hover{
+#cardWrap{
+	height: 500px;
+	overflow-y: scroll;
+	display: inline-grid;
+	grid-template-columns: 1fr 1fr;
+	/* border: solid 1px black;
+	border-radius: 5px; */
+}
+	#category > p {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+	text-align: center;
+	padding: 10px;
+}
+
+#category > p:hover {
+  color: #000;
+}
+#category > p:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+#category > p:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+	/* #category p:hover{
 		background: #12cfdc;
-	}
+	} */
 	#category p.active {
-		background: #6400ed;
-		color: #fff;
+	font-weight: bold;
+	font-size: 18px;
 	}
-	#category p {
+	/* #category p {
 	padding: 5px 10px;
 	cursor: pointer;
 	border-radius: 4px;
-}
+}  */
 	#category {
-		margin-top: 100px;
+		margin-top: 60px;
 	}
 
 .usernameapp p {
@@ -52,26 +83,50 @@ border-color: #6400ed;
 	color: #333333;
 
 }
-.img-lilprofile{
+/* .img-lilprofile{
 	width: 55px;
 	height: 55px;
-}
-	/* .img-thumbnail{
-		width: 50px!important;
-	} */
+} */
+
 	.img-food{
 		width: 100px!important;
 	}
 	#logo{
 		width: 8rem;
 	}
-	.img-logo {
+	.img-logo-main {
 			width: 110px;
-			margin-top: 90px;
-			margin-left: 20px;
+			/* margin-top: 90px; */
+			margin-left: 30px;
 	}
 
 	.card{
 		width: 29rem;
 		background: rgb(237, 237, 237);
 	}
+.profile-image{
+	width: 130px;
+	height: 130px;
+	padding: 5px;
+	border-radius: 100%;
+}
+.button_profile:hover {
+	background-color: #333333;
+	color: white;
+}
+.button_profile {
+	border-color: #333333;
+	-webkit-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+	-moz-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+	box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+}
+.button_create:hover {
+	background-color: #6400ed;
+	color: white;
+}
+.button_create {
+	border-color: #333333;
+	-webkit-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+	-moz-box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+	box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
+}
