--- a/src/css/Create.css
+++ b/src/css/Create.css
@@ -4,12 +4,12 @@
 #rightCol {
     background: #5e72e4;
 }
-	#cardWrap{
+ /* #cardWrap{
 		height: 500px;
 		overflow-y: scroll;
-		/* border: solid 1px black;
-		border-radius: 5px; */
-	}
+		border: solid 1px black;
+		border-radius: 5px;
+	} */
 	.badge{
 		cursor: pointer;
 
