redid the ui again

--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 	#rightCol {
-	background: #333333; /* fallback for old browsers */
+	background: black; /* fallback for old browsers */
 
 }
 	#leftCol{
