--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,13 +4,28 @@ html, body {
 	font-family: Lato, sans-serif;
 }
 #leftCol, #rightCol {
-    height: 100vh;
+	height: 100vh;
 }
 #leftCol{
 	width: 300px;
+	text-align: center;
+	padding: 20px;
+}
+#leftCol .profile-image {
+	width: 50px;
+	height: 50px;
+	margin-left: 0;
+	margin-bottom: 20px;
+}
+#leftCol .usernameapp p {
+	font-size: 15px;
+	margin-bottom: 2px;
 }
 #rightCol{
 	width: calc(100vw - 300px);
+}
+.logoWrapper + img {
+	width: 120px;
 }
 .toprow{
 	text-align: right;
@@ -25,6 +40,7 @@ html, body {
 	font-weight: bold;
 }
 .filterbutton {
+	cursor: pointer;
 	border-color: #12cfdc;
 	width: 180px;
 	font-size: 18px;
@@ -33,16 +49,23 @@ html, body {
 	box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
 }
 
+#dropdownbar {
+	height: 60px;
+}
+
 #cardWrap{
-	height: 500px;
+	height: calc(100vh - 60px);
 	overflow-y: scroll;
-	display: inline-grid;
-	grid-template-columns: 1fr 1fr;
-	margin-left: 50px;
-	margin-right: 50px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column-gap: 15px;
+	grid-row-gap: 15px;
+	padding: 20px;
 	/* border: solid 1px black;
 	border-radius: 5px; */
 }
+
+
 
 	#category > p {
   position: relative;
@@ -58,7 +81,7 @@ html, body {
 #category > p:before {
   content: "";
   position: absolute;
-  width: 70%;
+  width: 100%;
   height: 2px;
   bottom: 0;
   left: 0;
@@ -100,11 +123,23 @@ html, body {
 	height: 55px;
 } */
 
-	.img-food{
-		width: 100px!important;
+	.card-content {
+		width: auto;
+		float: left;
 	}
 	#logo{
 		width: 8rem;
+	}
+	.imageWrapper {
+		width: 80px;
+		float: left;
+		margin-right: 14px;
+	}
+	select.filterbutton {
+		background: white;
+	}
+	.imageWrapper img {
+		max-width: 100%;
 	}
 	.img-logo-main {
 			width: 110px;
@@ -113,7 +148,8 @@ html, body {
 	}
 	.card-body-place{
 		height: 12rem;
-		background: rgb(237, 237, 237);
+		background: white;
+		padding: 10px;
 	}
 	.card{
 
@@ -147,5 +183,5 @@ html, body {
 	box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.6);
 }
 .buttons_main {
-	margin-top: 60px;
+	margin-top: 30px;
 }
